# aventuras-zh-cn

./: .gitignore  README.md  compileApk.sh  eslint.config.js  fix_i18n.cjs  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-chinese-apk.yml  ci.yml  lint-and-typecheck.yml  release.yml
scripts/: release.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_chapters_checkpoints.sql  005_story_beats_resolved_at.sql  011_image_generation.sql  012_character_portraits.sql  013_branches.sql  014_fix_branch_fk.sql  015_branch_world_state.sql  016_character_vault.sql  017_lorebook_vault.sql  018_scenario_vault.sql  019_entry_reasoning.sql  022_vault_tags.sql  034_model_health_cache.sql  035_entry_versions.sql
src-tauri/src/: avt_import.rs  backup.rs  lib.rs  main.rs
src-tauri/src/sync/: commands.rs  server.rs  types.rs
src/lib/: log.ts
src/lib/components/: Toast.svelte
src/lib/constants/: modelHealth.ts
src/lib/hooks/: is-compact.svelte.ts
src/lib/i18n/: index.ts  zh-CN.ts
src/lib/services/: backupService.ts  database.ts  events.ts  export.test.ts  export.ts  exportTarget.ts  grammar.ts  imageExport.ts  modelHealthCache.ts  modelHealthOrchestrator.ts  rollbackService.ts  stChatImporter.ts  tokenizer.ts
src/lib/stores/: characterVault.svelte.ts  debug.svelte.ts  lorebookVault.svelte.ts  modelHealth.svelte.ts  scenarioVault.svelte.ts  settings.svelte.ts  story.svelte.ts  (+2 more)
src/routes/: +page.svelte
(+248 files in other folders)
