[package]
name = "aventura"
version = "0.7.6"
description = "AI-powered adventure and creative writing frontend"
authors = ["Contributors"]
edition = "2021"

[lib]
name = "aventura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = ["dep:tauri-plugin-devtools"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"

# Local network sync
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tauri-plugin-devtools = { version = "2", optional = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
hex = "0.4.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
